feat: update swagger documentation for recipes and recipe books
